--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+
+  <link  href="CSS/js.css" rel="stylesheet" type="text/css" >
     <title>Triangle-tracker</title>
   </head>
   <body>
