added the 1st paragraph

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   </head>
   <body>
 <h1>TRIANGLE-TRACKER</h1>
+   <p>Input values in the form below to determine type of triangle:</p>
   </body>
 </html>
