added the 2nd paragraph.

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
   <body>
 <h1>TRIANGLE-TRACKER</h1>
    <p>Input values in the form below to determine type of triangle:</p>
+
+   <p>side a:<input id="a" type="number" value="" placeholder="enter side A" ></p>
   </body>
 </html>
