added the 3rd paragraph

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
    <p>Input values in the form below to determine type of triangle:</p>
 
    <p>side a:<input id="a" type="number" value="" placeholder="enter side A" ></p>
+   <p>side b:<input id="b" type="number" value="" placeholder="enter side B" ></p>
   </body>
 </html>
