added the 4th paragraph and also a div

--- a/index.html
+++ b/index.html
@@ -13,5 +13,11 @@
 
    <p>side a:<input id="a" type="number" value="" placeholder="enter side A" ></p>
    <p>side b:<input id="b" type="number" value="" placeholder="enter side B" ></p>
+   <p>side c:<input id="c" type="number" value="" placeholder="enter side C" ></p>
+
+  <div id="result">
+
+  </div>
+
   </body>
 </html>
