--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
   </div>
    <input type="button" name="submit" onclick="triangle()" value="check">
+      <script src= "Javascript/script.js" type="text/javascript"></script>
 
   </body>
 </html>
