editted the header

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Kaushan+Script|Miss+Fajardose|Pacifico" rel="stylesheet">
 
-  <link  href="CSS/js.css" rel="stylesheet" type="text/css" >
+
+  <link  href="css/js.css" rel="stylesheet" type="text/css" >
     <title>Triangle-tracker</title>
   </head>
-  <body>
+  <body background=background.jpg>
 <h1>TRIANGLE-TRACKER</h1>
    <p>Input values in the form below to determine type of triangle:</p>
 
