--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
    <p>side c:<input id="c" type="number" value="" placeholder="enter side C" ></p>
 
    <div id="result">
-
+     <input type="button" name="submit" onclick="triangle()" value="check">
    </div>
-
-   <input type="button" name="submit" onclick="triangle()" value="check">
-   <script src= "Javascript/script.js" type="text/javascript"></script>
+   <script src= "javascript/script.js" type="text/javascript"></script>
   </body>
 </html>
