added a refresh button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <p>side b:<input id="b" type="number" value="" placeholder="enter side B" ></p>
    <p>side c:<input id="c" type="number" value="" placeholder="enter side C" ></p>
 
-   <div class="button">
+   <div class="result">
      <input type="button" name="submit" onclick="triangle()" value="check">
      <button onclick="location.reload();">Refresh Page</button>
    </div>
