seperated the refresh button and the check button

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
    <p>side b:<input id="b" type="number" value="" placeholder="enter side B" ></p>
    <p>side c:<input id="c" type="number" value="" placeholder="enter side C" ></p>
 
-   <div class="result">
+   <div id="result">
      <input type="button" name="submit" onclick="triangle()" value="check">
+   <div class="refresh">
      <button onclick="location.reload();">Refresh Page</button>
    </div>
    <script src= "javascript/script.js" type="text/javascript"></script>
