--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html>
  <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Kaushan+Script|Miss+Fajardose|Pacifico" rel="stylesheet">
+  <script src="http://code.jquery.com/jquery-1.10.2js"></script>
+  <script src="http://code.jquery.com?ui?1.11.4/jquery-ui.js"></script>
+  <link href="css/animate.css" rel="stylesheet"/>
+  <link href="css/waypoints.css" rel="stylesheet"/>
+  <script src="javascript/jquery.waypoints.min.js" typ="text/javascript"></script>
+  <script src="javascript/waypoints.js" type="text/javascript">
+
+  </script>
   <link  href="css/js.css" rel="stylesheet" type="text/css" >
   <title>Triangle Tracker</title>
  </head>
+ <div class="body">
  <body>
    <h1 class= h1>TRIANGLE TRACKER</h1>
    <p>Input values in the form below to determine type of triangle:</p>
@@ -15,10 +24,13 @@
    <p>side c:<input id="c" type="number" value="" placeholder="enter side C" ></p>
 
    <div id="result">
-     <input type="button" name="submit" onclick="triangle()" value="check">
+   <input type="button" name="submit" onclick="triangle()" value="check">
+  </div>
+
    <div class="refresh">
      <button onclick="location.reload();">Refresh Page</button>
    </div>
    <script src= "javascript/script.js" type="text/javascript"></script>
   </body>
+</div>
 </html>
