--- a/index.html
+++ b/index.html
@@ -10,14 +10,23 @@
   <link href="css/waypoints.css" rel="stylesheet"/>
   <script src="javascript/jquery.waypoints.min.js" typ="text/javascript"></script>
   <script src="javascript/waypoints.js" type="text/javascript">
-
   </script>
   <link  href="css/js.css" rel="stylesheet" type="text/css" >
   <title>Triangle Tracker</title>
  </head>
  <div class="body">
  <body>
-   <h1 class= h1>TRIANGLE TRACKER</h1>
+   <section class="intro">
+     <div class="inner">
+       <div class="content">
+         <section class="os-animation" data-os-animation="bounceInUp" data-os-animation-delay="0s"></section>
+         <h1>TRAINGLE-TRACKER</h1>
+                <section class="os-animation" data-os-animation="bounceInUp" data-os-animation-delay="0s"></section>
+                <h1>Get Started</h1>
+       </div>
+     </div>
+   </section>
+
    <p>Input values in the form below to determine type of triangle:</p>
    <p>side a:<input id="a" type="number" value="" placeholder="enter side A" ></p>
    <p>side b:<input id="b" type="number" value="" placeholder="enter side B" ></p>
