--- a/index.html
+++ b/index.html
@@ -4,29 +4,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Kaushan+Script|Miss+Fajardose|Pacifico" rel="stylesheet">
-  <script src="http://code.jquery.com/jquery-1.10.2js"></script>
-  <script src="http://code.jquery.com?ui?1.11.4/jquery-ui.js"></script>
-  <link href="css/animate.css" rel="stylesheet"/>
-  <link href="css/waypoints.css" rel="stylesheet"/>
-  <script src="javascript/jquery.waypoints.min.js" typ="text/javascript"></script>
-  <script src="javascript/waypoints.js" type="text/javascript">
-  </script>
   <link  href="css/js.css" rel="stylesheet" type="text/css" >
   <title>Triangle Tracker</title>
  </head>
- <div class="body">
- <body>
-   <section class="intro">
-     <div class="inner">
-       <div class="content">
-         <section class="os-animation" data-os-animation="bounceInUp" data-os-animation-delay="0s"></section>
-         <h1>TRAINGLE-TRACKER</h1>
-                <section class="os-animation" data-os-animation="bounceInUp" data-os-animation-delay="0s"></section>
-                <h1>Get Started</h1>
-       </div>
-     </div>
-   </section>
-
+ <div class="container">
+ <body background="drop.jpg">
+   <h1>Traingle-Tracker</h1>
    <p>Input values in the form below to determine type of triangle:</p>
    <p>side a:<input id="a" type="number" value="" placeholder="enter side A" ></p>
    <p>side b:<input id="b" type="number" value="" placeholder="enter side B" ></p>
