--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Triangle Tracker</title>
  </head>
  <div class="container">
- <body background="drop.jpg">
+ <body>
    <h1>Traingle-Tracker</h1>
    <p>Input values in the form below to determine type of triangle:</p>
    <p>side a:<input id="a" type="number" value="" placeholder="enter side A" ></p>
